[gd_scene load_steps=4 format=3 uid="uid://cdsusg1o6yfyj"]

[ext_resource type="Script" path="res://Bullet.gd" id="1_wh1ts"]
[ext_resource type="Texture2D" uid="uid://bqwo2xffjm3hh" path="res://icon.svg" id="2_m0khr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlqqn"]
size = Vector2(128, 128)

[node name="Bullet" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_wh1ts")
sizeX = 3.0
sizeY = 3.0

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("2_m0khr")

[node name="BotPointer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="BotPointer"]
modulate = Color(1, 0.968627, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_m0khr")

[node name="TopPointer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="TopPointer"]
modulate = Color(1, 0.968627, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_m0khr")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jlqqn")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
